tests/should_pass/typestate_chain.fit
enum Phase { Init, Active, Closing }

resource Session<S> {
    id: SessionId,
    cleanup: abort_session,
}

enum SessionError { Timeout, AuthFailed }

fn start_session() -> Result<Session<Init>, SessionError>
fn activate(s: move Session<Init>) -> Result<Session<Active>, SessionError>
fn deactivate(s: move Session<Active>) -> Result<Session<Closing>, SessionError>
fn end_session(s: move Session<Closing>) -> Result<(), SessionError>

fn run_session() -> Result<(), SessionError> {
    let s = start_session()?
    let s = activate(s)?
    let s = deactivate(s)?
    end_session(s)?
    Ok(())
}
